syntax = "proto3";

package auth;

option go_package = "github.com/Dawit0/examAuth/proto;auth";

service AuthService {
	rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message ValidateUserRequest {
    string token = 1;
}

message ValidateUserResponse {
    bool isValid = 1;
    int64 userId = 2;
}

message GetUserRequest {
    int64 userId = 1;
}

message GetUserResponse {
    int64 id = 1;
    string username = 2;
    string phone = 3;
    string email = 4;
    string badge = 5;
    bool isActive = 6;
    double score = 7;
}

message UpdateUserRequest {
    int64 userId = 1;
    string username = 2;
    string phone = 3;
    string email = 4;
    string badge = 5;
    bool isActive = 6;
    double score = 7;
    string password = 8;
}

message UpdateUserResponse {
    int64 id = 1;
    string username = 2;
    string phone = 3;
    string email = 4;
    string badge = 5;
    bool isActive = 6;
    double score = 7;
    string password = 8;
}